--- a/implemetation_test_1/src/main/resources/application.yml
+++ b/implemetation_test_1/src/main/resources/application.yml
@@ -15,9 +15,16 @@ spring:
         format_sql: trues
         dialect: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 #      ddl-auto: update
     show-sql: true
+  flyway:
+    enabled: false
+    url:
+    user: root
+    password: root
+    schemas: waizly
+    locations: classpath:db/migration
 springdoc:
   api-docs:
     path: /api-docs
@@ -29,6 +36,5 @@ springdoc:
 logging:
   level:
     web: debug
-
 
 
